--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.1
         with:
-          name: 'OpenWallet - JDK${{ matrix.jdk }}'
+          name: 'OpenWallet - Build'
           path: build/libs/OpenWallet*.jar
