--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ name: 'OpenWallet'
 version: 1.1
 api-version: 1.13
 author: 'Techno Neziw'
-softdepend: [PlaceholderAPI, GadgetsMenu]
+softdepend: [PlaceholderAPI, GadgetsMenu, Vault]
