--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 # Configuration file version (don't change manually)
-config-version: 2
+config-version: 3
 
-#Update checker configurartion
+#Whether update checker should be enabled
 update-checker: true
 
 # Database configuration
