[ci skip] Disable PlaceholderAPI hook by default

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -30,8 +30,8 @@ database-settings:
 start-balance: 20.0
 
 # Whether PlaceholderAPI hook should be enabled
-# Default: true
-hook-placeholder-api: true
+# Default: false
+hook-placeholder-api: false
 
 # Whether GadgetsMenu hook should be enabled
 # Default: false
